tests/neg/i9432.scala
trait CLibrary {
  @native def foo(x: Int): Unit // error
}
